# concept-lab

./: .gitignore  README.md  package.json
apps/backend/: .env.example  package.json  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/core/: config.py  embeddings.py  es_lifecycle.py
apps/backend/app/routers/: context.py  python.py  rag_elasticsearch.py  react.py  sql.py
apps/backend/app/services/: context_service.py
apps/frontend/: constants.ts  next.config.js  package.json  types.ts
apps/frontend/app/: layout.tsx  page.tsx
apps/frontend/app/api/python/decorators/: route.ts
apps/frontend/app/api/react/use-effect/: route.ts
apps/frontend/app/api/sql/joins/: route.ts
apps/frontend/app/python/: page.tsx
apps/frontend/app/python/decorators/: page.tsx
apps/frontend/app/python/generators-vs-iterators/: page.tsx
apps/frontend/app/react/: page.tsx
apps/frontend/app/react/optimizations/: page.tsx
apps/frontend/app/react/use-context/: page.tsx
apps/frontend/app/react/use-context/child-one/: page.tsx
apps/frontend/app/react/use-context/child-two/: page.tsx
apps/frontend/app/react/use-effect/: page.tsx
apps/frontend/app/sql/joins/: page.tsx
apps/frontend/components/: Chat.tsx  CodeBlock.tsx
