[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for Concept Lab"
authors = ["Sushant Parashar <sushantparashar2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.32.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 